# teach-mcp-with-mcp

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: meta-prompt-major-concepts.mdc  teach-mcp-agent-education.mdc
docs/: index.md  mcp-concept.md  mcp-examples.md
litellm/: LiteLLM.ipynb  litellm_embedding.py  litellm_mcp.py  litellm_openai.py  litellm_openai_compatible.py  litellm_response_api.py  litellm_text_completion_openai.py  litellm_text_to_speech.py
modelcontextprotocol/: modelcontext_client.py  modelcontext_prompts.py  modelcontext_resource.py  modelcontext_server.py  modelcontext_tools.py
openai-agent-sdk/: openai_agent.py  openai_agent_graph.py  openai_llmprovider.py  openai_mcp.py  openai_orchestrate.py  openai_tools.py
src/: readme.md  runner.py  teach_mcp_agent.py  tools.py
src/agents/: builder_agent.py  directory_agent.py  gap_agent.py  qa_agent.py  writer_agent.py
