[project]
name = "teach-mcp-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "graphviz>=0.20.3",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "litellm>=1.71.2",
    "mcp[cli]>=1.9.1",
    "openai-agents[litellm]>=0.0.16",
    "python-dotenv>=1.1.0",
]
